# medical-iot-pipeline

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml
.github/workflows/: code.yml
code/: bigquery_create.py  bigtable_load.py  ingest.py
design_docs/: ARCHITECTURE.md  SCHEMA_DEFENSE.md
notebooks/: test_query.ipynb
sql/: analytical_query.sql  vitals_schema.sql
src_code/: bigquery_create.py  bigtable_load.py  ingest.py  time_aux.py  vertex_pipeline.py
tests/: test_bigquery_create.py  test_bigtable_load.py  test_ingest.py
